modules/gdscript/tests/scripts/analyzer/errors/match_literal_stringname.gd
func test():
	match &"abc":
		&"abc":
			print("should not reach")
